--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link d-none d-sm-block" href="#portfolio" id="portfolio_link" data-scroll="portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item" aria-current = "page">
-                  <a class="nav-link d-none d-sm-block" href="#contact" data-scroll="contact">Contact Me</a>
+                  <a class="nav-link" href="#contact" data-scroll="contact">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -39,15 +39,15 @@
         <!-- Header-->
         <header class="min-vh-100 d-flex justify-content-center align-items-center" id = "profile">
             <div class="row">
-                <div class="col-lg-5 col-md-12 align-items-center justify-content-center">
-                    <figure class = "rounded-circle" style = "max-width: 350px; max-height: 350px; overflow: hidden; margin: 1rem auto; ">
+                <!-- <div class="col-lg-5 col-md-12 align-items-center justify-content-center">
+                    <figure class = "rounded-circle" style = "max-width: 325px; max-height: 325px; overflow: hidden; margin: 1rem auto; ">
                         <img src="assets/pfp_final.png" class="rounded mx-auto d-block img-fluid" alt="my image" style="width: 100%; height: 100%; object-fit: cover;">
                     </figure>
-                </div>
-                <div class="col-lg-7 col-md-12 text-center" style="margin-top: 3rem;">
-                    <h1 class="mb-3 carousel-fade">Hello! I am Oliver,</h1>
+                </div> -->
+                <div class="col-lg-12 col-md-12 text-center">
+                    <h1 class="mb-3 carousel-fade">👋 Hello! I am <span style="font-size: 3.5rem;">Oliver</span>,</h1>
                     <h3 class="mb-5"><em>an aspiring software engineer from London</em></h3>
-                    <a class="btn btn-primary btn-xl" href="#about" id="about_button">Learn more about me</a>
+                    <a class="btn btn-primary btn-xl" href="#about" id="about_button" style="margin-top: 1rem;">Learn more about me</a>
                 </div>
             </div>
         </header>
@@ -60,8 +60,8 @@
                 <div class = "p-3" style="border: dotted 2px #000;">   
                     <p class="fs-5">I am a 19-year old programmer passionate about software development, and programming innovative solutions to real-world problems.
                         Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science,
-                        but when I am not studying I love to challenge myself with complex algorithmic problems on <a target="_blank" href="https://leetcode.com/problemset/algorithms/">Leetcode</a>.
-                        I also love to work on my personal projects, like this website you are on right now made using Boostrap, a mobile-first frontend development framework.</p>
+                        but when I am not studying I love to challenge myself with complex algorithmic problems on Leetcode.
+                        I also love to work on my personal projects, like this website you are on right now made using Bootstrap, a mobile-first frontend development framework.</p>
                     <p class="fs-5">I am actively seeking internships for software development roles. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                 </div>
             </div>
@@ -85,13 +85,13 @@
                                 <div class="collapse" id="info1">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Graduated with an IB Diploma, taking higher Mathematics, Physics and Computer Science
+                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Graduated with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
                                         </li>
                                         <li class="custom-list-item mb-3">
                                             <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects.
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Completed my Extended Essay on genetic algorithms in image processing, which scored an A
+                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Completed my Extended Essay on genetic algorithms in image processing, which scored an A.
                                         </li>
                                     </ul>
                                 </div>
@@ -141,7 +141,7 @@
                                 <div class="collapse" id="info4">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Currently in progress
+                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Currently in progress.
                                         </li>
                                     </ul>
                                 </div>
@@ -186,8 +186,8 @@
                                 <h4 class="card-title">Web Development <i class="fas fa-code"></i></h4>
                                 <ul class="card-list">
                                     <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Knowledgeable in HTML, CSS and JavaScript.</li>
-                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Experience with both front-end and back-end development</li>
-                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Developed a website to manage events for the CS Department at Warwick, using Flask</li>
+                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Restructured and customised the code from a Bootstrap template to create this website.</li>
+                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Developed a website to manage events for the CS Department at Warwick, using Flask.</li>
                                 </ul>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                 </div> -->
 
                 <div class="border-div mx-auto d-inline-block p-3">
-                    <p>This website was developed by me, Oliver Brown, in Visual Studio Code. Thank you for visiting.</p>
+                    <p>This website was developed (by me) in Visual Studio Code. Thank you for visiting.</p>
                 </div>
             </div>
         </footer>
