--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>oliver.to</title>
+        <title>oliverb.live</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/icon.png" />
         <!-- Font Awesome icons (free version)-->
@@ -21,7 +21,7 @@
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand navbar-light bg-light fixed-top">
-            <a class="navbar-brand" href="#" id="default_link">oliver website</a>
+            <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px;">oliverb.live</a>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" aria-current = "page">
