--- a/index.html
+++ b/index.html
@@ -135,13 +135,16 @@
                             </li>
                             <li class="list-group-item">
                                 <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
-                                    Forage Virtual Experience
+                                    J.P. Morgan Software Engineering Virtual Experience, Forage
                                     <span class="float-end">Sept, 2023</span>
                                 </div>
                                 <div class="collapse" id="info4">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Currently in progress.
+                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Completed a job simulation online for J.P. Morgan whereby I was tasked with fixing broken files in repositories to create responsive web applications for clients
+                                        </li>
+                                        <li class="custom-list-item mb-3">
+                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Used J.P. Morgan Chase's open source library Perpsective to create a live feed displayed as a graph for traders to be able to visually compare current and historial stock data, enhancing the user experience
                                         </li>
                                     </ul>
                                 </div>
@@ -204,10 +207,10 @@
                 <div class="content-section-heading text-center">
                     <h2 class="mb-4">Contact Me</h2>
                 </div>
-                <div style = "margin-bottom: 5rem;">
+                <div style = "margin-bottom: 3rem;">
                     <p>Please feel free to send me an email below, and yes, I am open for any opportunities</p>
                 </div>
-                <ul class="list-inline" style="margin-bottom: 8rem;">
+                <ul class="list-inline" style="margin-bottom: 4rem;">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" target="_blank" href="mailto:olivertouki@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
                     </li>
@@ -219,9 +222,9 @@
                     </li>
                 </ul>
 
-                <!-- <div class="mx-auto text-center" style="margin-bottom: 7rem;">
-                    <a href="" download target="_blank" class="btn btn-primary p-3">See my résumé</a>
-                </div> -->
+                <div class="mx-auto text-center" style="margin-bottom: 8rem;">
+                    <a href="/assets/OliverBrown.pdf" download target="_blank" class="btn btn-primary p-3">See my résumé</a>
+                </div>
 
                 <div class="border-div mx-auto d-inline-block p-3">
                     <p>This website was developed (by me) in Visual Studio Code. Thank you for visiting.</p>
