--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
-    <body id="page-top">
-        <nav class="navbar navbar-expand navbar-light bg-light fixed-top">
-            <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px;">oliverb.live</a>
+    <body id="page-top" class = "theme">
+        <nav class="navbar navbar-expand navbar-theme fixed-top">
+            <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px; color: #ffffff;">oliverb.live</a>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" aria-current = "page">
@@ -47,22 +47,22 @@
                 <div class="col-lg-12 col-md-12 text-center">
                     <h1 class="mb-3 carousel-fade">👋 Hello! I am <span style="font-size: 3.5rem;">Oliver</span>,</h1>
                     <h3 class="mb-5"><em>an aspiring software engineer from London</em></h3>
-                    <a class="btn btn-primary btn-xl" href="#about" id="about_button" style="margin-top: 1rem;">Learn more about me</a>
+                    <a class="btn btn-theme btn-xl" href="#about" id="about_button" style="margin-top: 1rem;">Learn more about me</a>
                 </div>
             </div>
         </header>
         <!-- About-->
-        <section class="content-section bg-light" id="about">
+        <section class="content-section" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="content-section-heading text-center">
                     <h2 class="mb-5">About Me</h2>
                 </div>
-                <div class = "p-3" style="border: dotted 2px #000;">   
-                    <p class="fs-5">I am a 19-year old programmer passionate about software development, and programming innovative solutions to real-world problems.
-                        Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science,
-                        but when I am not studying I love to challenge myself with complex algorithmic problems on Leetcode.
-                        I also love to work on my personal projects, like this website you are on right now made using Bootstrap, a mobile-first frontend development framework.</p>
-                    <p class="fs-5">I am actively seeking internships for software development roles. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
+                <div class = "p-3" style="border: dotted 2px #ffcd74;">   
+                    <p class="fs-5">I am a programmer passionate about software development, and programming innovative solutions to real-world problems.
+                        Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science in my second year,
+                        but when I am not studying I love to work on my personal projects, which may include extending a piece of coursework from a University module which I find interesting, 
+                        or a project that starts from an idea, like this website you are on right now made using Bootstrap, a mobile-first frontend development framework.</p>
+                    <p class="fs-5">I am actively seeking internships for software development roles for this Summer 2024. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                 </div>
             </div>
         </section>
@@ -83,15 +83,15 @@
                                     <span class="float-end">2020 - 2022</span>
                                 </div>
                                 <div class="collapse" id="info1">
-                                    <ul style="padding: 5px; margin-top: 10px;">
+                                    <ul style="padding: 5px; margin-top: 10px; color: white;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Graduated with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects.
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Completed my Extended Essay on genetic algorithms in image processing, which scored an A.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on genetic algorithms in image processing, which scored an A.
                                         </li>
                                     </ul>
                                 </div>
@@ -104,10 +104,10 @@
                                 <div class="collapse" id="info2">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Currently enrolled in my second year at the University of Warwick. 
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Currently enrolled in my second year at the University of Warwick. 
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; This year I will be taking modules on Software Engineering, Database systems, Operating Systems and Computer Networks, Algorithms and more.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; This year I will be taking modules on Software Engineering, Database systems, Operating Systems and Computer Networks, Algorithms and more.
                                         </li>
                                     </ul>
                                 </div>
@@ -125,10 +125,10 @@
                                 <div class="collapse" id="info3">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the summer, providing a solid programming foundation to many young learners.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the summer, providing a solid programming foundation to many young learners.
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; I made Python learning more enjoyable and engaging for kids by creating interactive lessons that linked to hobbies and interests, which strenghtened my communication skills.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I made Python learning more enjoyable and engaging for kids by creating interactive lessons that linked to hobbies and interests, which strenghtened my communication skills.
                                         </li>
                                     </ul>
                                 </div>
@@ -141,10 +141,10 @@
                                 <div class="collapse" id="info4">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Completed a job simulation online for J.P. Morgan whereby I was tasked with fixing broken files in repositories to create responsive web applications for clients
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed a job simulation online for J.P. Morgan whereby I was tasked with fixing broken files in repositories to create responsive web applications for clients
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right" style="color: #007bff"></i>&nbsp; Used J.P. Morgan Chase's open source library Perpsective to create a live feed displayed as a graph for traders to be able to visually compare current and historial stock data, enhancing the user experience
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Used J.P. Morgan Chase's open source library Perpsective to create a live feed displayed as a graph for traders to be able to visually compare current and historial stock data, enhancing the user experience
                                         </li>
                                     </ul>
                                 </div>
@@ -153,12 +153,69 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+
+            <h3 class = "mb-5 text-center">Projects <i class="fas fa-folder-open"></i></h3>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Connect 4 Solver"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Portfolio Website"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Network intrusion sytsem"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="PassManager"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://github.com/oliverbrown1/Minimax_Connect_4" target="_blank">
+                            <img src="assets/connect4.png" class="d-block w-100 carousel-image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Connect 4 using AI</h5>
+                                <p>Developed a MiniMax Algorithm with Alpha/Beta pruning to play a game of Connect 4 optimally against a human player</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://github.com/oliverbrown1/portfolio_website" target="_blank">
+                            <img src="assets/PortfolioWebsite.png" class="d-block w-100 carousel-image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Portfolio Website</h5>
+                                <p>Restructured and customised the code from a Bootstrap template to create this website.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://github.com/oliverbrown1/news_sentiment_analysis/tree/main" target="_blank">
+                            <img src="assets/NewsAnalysis.png" class="d-block w-100 carousel-image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>News Sentiment Analysis Program</h5>
+                                <p>Developed a Python program that scrapes news articles about a certain topic, and provides sentiment analysis to the content of these articles using an NLP model.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://github.com/oliverbrown1/PassManager" target="_blank">
+                            <img src="assets/passmanager.png" class="d-block w-100 carousel-image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Password Management System</h5>
+                                <p>Developed a Password Management System in JavaFX, called PassManager. This was for my Year 13 Computer Science IA.</p>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+                <!-- <div>
                     <h3 class="mb-4 text-center p-3">
                         Skills
                     </h3>
-                </div>
-                <div class="row text-center mb-3 justify-content-center">
+                </div> -->
+                <!-- <div class="row text-center mb-3 justify-content-center">
                     <div class="col-lg-4 col-md-10 mb-4">
                         <div class="card h-100">
                             <div class="card-body">
@@ -176,8 +233,8 @@
                             <div class="card-body">
                                 <h4 class="card-title">Python <i class="fab fa-python"></i></h4>
                                 <ul class="card-list">
-                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Familiar with Procedural and Object Oriented Programming.</li>
-                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Created interactive mini-projects using Tkinter and OOP as inspiration for the students at Funtech, including a fully-functioning Pacman program.</li>
+                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Proficient in Procedural and Object Oriented Programming.</li>
+                                    <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Developed a MiniMax Algorithm with Alpha/Beta pruning to play a game of Connect 4 optimally against a human player</li>
                                 </ul>
                             </div>
                         </div>
@@ -195,14 +252,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
 
         </section>
         <!-- Contact-->
-        <footer class="footer text-center bg-light" id="contact">
+        <footer class="footer text-center" id="contact">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h2 class="mb-4">Contact Me</h2>
@@ -215,7 +272,7 @@
                         <a class="social-link rounded-circle text-white mr-3" target="_blank" href="mailto:olivertouki@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" target="_blank" href="https://github.com/Sunaion"><i class="fa-brands fa-square-github"></i></a>
+                        <a class="social-link rounded-circle text-white" target="_blank" href="https://github.com/olivebrown1"><i class="fa-brands fa-square-github"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" target="_blank" href="https://www.linkedin.com/in/oliver-brown-53067a25b/"><i class="fa-brands fa-linkedin"></i></a>
@@ -223,11 +280,11 @@
                 </ul>
 
                 <div class="mx-auto text-center" style="margin-bottom: 8rem;">
-                    <a href="/assets/OliverBrown.pdf" download target="_blank" class="btn btn-primary p-3">See my résumé</a>
+                    <a href="assets/Oliver_Brown_CV_2024_2.pdf" download target="_blank" class="btn btn-theme p-3">See my résumé</a>
                 </div>
 
                 <div class="border-div mx-auto d-inline-block p-3">
-                    <p>This website was developed (by me) in Visual Studio Code. Thank you for visiting.</p>
+                    <p>Created in 2023 using Bootstrap, by Oliver Brown</p>
                 </div>
             </div>
         </footer>
