--- a/index.html
+++ b/index.html
@@ -157,13 +157,23 @@
             <h3 class = "mb-5 text-center">Projects <i class="fas fa-folder-open"></i></h3>
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Connect 4 Solver"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Portfolio Website"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Network intrusion sytsem"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="PassManager"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Task Manager"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active" aria-current="true" aria-label="Connect 4 Solver"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Portfolio Website"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Network intrusion sytsem"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="PassManager"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <a href="https://github.com/oliverbrown1/ReactTaskManager" target="_blank">
+                            <img src="assets/taskmanager.png" class="d-block w-100 carousel-image">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Full-stack Task Manager Web Application</h5>
+                                <p>Created a full-stack productivity web application for users to manage their tasks and complete tasks in the application. Built using Next.js and React, as well as PocketBase to maintain a backend data storage.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
                         <a href="https://github.com/oliverbrown1/Minimax_Connect_4" target="_blank">
                             <img src="assets/connect4.png" class="d-block w-100 carousel-image">
                             <div class="carousel-caption d-none d-md-block">
@@ -272,7 +282,7 @@
                         <a class="social-link rounded-circle text-white mr-3" target="_blank" href="mailto:olivertouki@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" target="_blank" href="https://github.com/olivebrown1"><i class="fa-brands fa-square-github"></i></a>
+                        <a class="social-link rounded-circle text-white" target="_blank" href="https://github.com/oliverbrown1"><i class="fa-brands fa-square-github"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" target="_blank" href="https://www.linkedin.com/in/oliver-brown-53067a25b/"><i class="fa-brands fa-linkedin"></i></a>
@@ -280,7 +290,7 @@
                 </ul>
 
                 <div class="mx-auto text-center" style="margin-bottom: 8rem;">
-                    <a href="assets/OliverBrownResume.pdf" download target="_blank" class="btn btn-theme p-3">See my résumé</a>
+                    <a href="assets/Resume.pdf" download target="_blank" class="btn btn-theme p-3">See my résumé</a>
                 </div>
 
                 <div class="border-div mx-auto d-inline-block p-3">
