--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>oliverb.live</title>
+        <title>oliverb.uk</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/icon.png" />
         <!-- Font Awesome icons (free version)-->
@@ -21,7 +21,7 @@
     </head>
     <body id="page-top" class = "theme">
         <nav class="navbar navbar-expand navbar-theme fixed-top">
-            <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px; color: #ffffff;">oliverb.live</a>
+            <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px; color: #ffffff;">oliverb.uk</a>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" aria-current = "page">
@@ -45,7 +45,7 @@
                     </figure>
                 </div> -->
                 <div class="col-lg-12 col-md-12 text-center">
-                    <h1 class="mb-3 carousel-fade">👋 Hello! I am <span style="font-size: 3.5rem;">Oliver</span>,</h1>
+                    <h1 class="mb-3 carousel-fade">Hi! I am <span style="font-size: 3.5rem;">Oliver</span>,</h1>
                     <h3 class="mb-5"><em>an aspiring software engineer from London</em></h3>
                     <a class="btn btn-theme btn-xl" href="#about" id="about_button" style="margin-top: 1rem;">Learn more about me</a>
                 </div>
@@ -58,11 +58,11 @@
                     <h2 class="mb-5">About Me</h2>
                 </div>
                 <div class = "p-3" style="border: dotted 2px #ffcd74;">   
-                    <p class="fs-5">I am a programmer passionate about software development, and programming innovative solutions to real-world problems.
-                        Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science in my second year,
-                        but when I am not studying I love to work on my personal projects, which may include extending a piece of coursework from a University module which I find interesting, 
-                        or a project that starts from an idea, like this website you are on right now made using Bootstrap, a mobile-first frontend development framework.</p>
-                    <p class="fs-5">I am actively seeking internships for software development roles for this Summer 2024. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
+                    <p class="fs-5">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
+                        Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science in my third and final year,
+                        but when I am not studying I love to play the piano, go to the gym and work on personal coding projects.
+                        While I am constantly aiming to improve my skills in my areas of interest such as web development, I am also passionate about learning new technologies and gaining experience in different areas of Computer Science.</p>
+                    <p class="fs-5">Currently, I am actively seeking graduate roles and opportunities in software development. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                 </div>
             </div>
         </section>
@@ -74,28 +74,9 @@
                     <h2 class="mb-5">Portfolio</h2>
                 </div>
                 <div class="row" style = "margin-top: 5rem;">
-                    <div class="col-lg-6 col-md-12 text-center mb-5">
+                    <div class="col-lg-12 col-md-12 text-center mb-5">
                         <h3 class = "mb-5">Education <i class="fas fa-school"></i></h3>
                         <ul class="list-group">
-                            <li class="list-group-item">
-                                <div data-bs-toggle="collapse" href="#info1" role="button" aria-expanded="false" aria-controls="info1" class="hover-underline">
-                                    International Baccalaureate, Dartford Grammar School
-                                    <span class="float-end">2020 - 2022</span>
-                                </div>
-                                <div class="collapse" id="info1">
-                                    <ul style="padding: 5px; margin-top: 10px; color: white;">
-                                        <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
-                                        </li>
-                                        <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects.
-                                        </li>
-                                        <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on genetic algorithms in image processing, which scored an A.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
                             <li class="list-group-item">
                                 <div data-bs-toggle="collapse" href="#info2" role="button" aria-expanded="false" aria-controls="info2" class="hover-underline">
                                     Computer Science BSc, University of Warwick
@@ -104,47 +85,68 @@
                                 <div class="collapse" id="info2">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Currently enrolled in my second year at the University of Warwick. 
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Currently enrolled in my third and final year at the University of Warwick. 
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; This year I will be taking modules on Software Engineering, Database systems, Operating Systems and Computer Networks, Algorithms and more.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; This year I am hoping to do a project involving advanced Machine Learning (ML) algorithms
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <div data-bs-toggle="collapse" href="#info1" role="button" aria-expanded="false" aria-controls="info1" class="hover-underline">
+                                    International Baccalaureate, Dartford Grammar School
+                                    <span class="float-end">2020 - 2022</span>
+                                </div>
+                                <div class="collapse" id="info1">
+                                    <ul style="padding: 5px; margin-top: 10px; color: white;">
+                                        <li class="custom-list-item mb-3">
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated sixth form with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
+                                        </li>
+                                        <li class="custom-list-item mb-3">
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects
+                                        </li>
+                                        <li class="custom-list-item mb-3">
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on the performance of genetic algorithms on enhancing contrast of images against traditional algorithms, which scored an A.
                                         </li>
                                     </ul>
                                 </div>
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-12 text-center mb-5">
+                    <div class="col-lg-12 col-md-12 text-center mb-5">
                         <h3 class = "mb-5">Experience <i class="fas fa-briefcase"></i></h3>
                         <ul class="list-group">
                             <li class="list-group-item">
                                 <div data-bs-toggle="collapse" href="#info3" role="button" aria-expanded="false" aria-controls="info3" class="hover-underline">
-                                    Tech Tutor, Funtech
-                                    <span class="float-end">July - Sept, 2023</span>
+                                    Software Developer Intern, AVEVA
+                                    <span class="float-end">June - Aug, 2024</span>
                                 </div>
                                 <div class="collapse" id="info3">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the summer, providing a solid programming foundation to many young learners.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; In the Summer of my second year I interned at AVEVA in their Cambridge Science Park office, in which I was a part of AVEVA's E3D team (an application to model industrial plants) with two other interns
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I made Python learning more enjoyable and engaging for kids by creating interactive lessons that linked to hobbies and interests, which strenghtened my communication skills.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Our main project was to develop a working prototype AI assistant that would be implemented into the E3D application, with the help of an ML expert. At the end of the internship we would present our project to the other teams and interns
+                                        </li>
+                                        <li class="custom-list-item mb-3">
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Based on a retrieval-augmented generation (RAG) architecture, we developed a basic pipeline utilising Langchain framework, which was then evaluated using Langsmith and then enhanced with advanced RAG techniques
                                         </li>
                                     </ul>
                                 </div>
-                            </li>
                             <li class="list-group-item">
                                 <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
-                                    J.P. Morgan Software Engineering Virtual Experience, Forage
-                                    <span class="float-end">Sept, 2023</span>
+                                    Tech Tutor, Funtech
+                                    <span class="float-end">July - Sept, 2023</span>
                                 </div>
                                 <div class="collapse" id="info4">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed a job simulation online for J.P. Morgan whereby I was tasked with fixing broken files in repositories to create responsive web applications for clients
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the summer of my first year, providing a solid programming foundation to many young learners.
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Used J.P. Morgan Chase's open source library Perpsective to create a live feed displayed as a graph for traders to be able to visually compare current and historial stock data, enhancing the user experience
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I made Python learning more enjoyable and engaging for kids by creating interactive lessons and used examples that linked to hobbies and interests, which strenghtened my communication skills.
                                         </li>
                                     </ul>
                                 </div>
@@ -275,7 +277,7 @@
                     <h2 class="mb-4">Contact Me</h2>
                 </div>
                 <div style = "margin-bottom: 3rem;">
-                    <p>Please feel free to send me an email below, and yes, I am open for any opportunities</p>
+                    <p>Please feel free to send me an email below</p>
                 </div>
                 <ul class="list-inline" style="margin-bottom: 4rem;">
                     <li class="list-inline-item">
@@ -289,9 +291,6 @@
                     </li>
                 </ul>
 
-                <div class="mx-auto text-center" style="margin-bottom: 8rem;">
-                    <a href="assets/Resume.pdf" download target="_blank" class="btn btn-theme p-3">See my résumé</a>
-                </div>
 
                 <div class="border-div mx-auto d-inline-block p-3">
                     <p>Created in 2023 using Bootstrap, by Oliver Brown</p>
