Logo update and grammar corrections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>oliverb.uk</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/icon.png" />
+        <link rel="icon" type="image/x-icon" href="assets/logo_new.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -57,7 +57,7 @@
                 <div class="content-section-heading text-center">
                     <h2 class="mb-5">About Me</h2>
                 </div>
-                <div class = "p-3" style="border: dotted 2px #ffcd74;">   
+                <div class = "p-3" id="aboutme">   
                     <p class="fs-5">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
                         Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science in my third and final year,
                         but when I am not studying I love to play the piano, go to the gym and work on personal coding projects.
@@ -128,7 +128,7 @@
                                             <i class="fa-solid fa-arrow-right"></i>&nbsp; In the Summer of my second year I interned at AVEVA in their Cambridge Science Park office, in which I was a part of AVEVA's E3D team (an application to model industrial plants) with two other interns
                                         </li>
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Our main project was to develop a working prototype AI assistant that would be implemented into the E3D application, with the help of an ML expert. At the end of the internship we would present our project to the other teams and interns
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; Our main project was to develop a working prototype AI assistant that would be implemented into the E3D application, with the help of a ML expert. At the end of the internship we would present our project to the other teams and interns
                                         </li>
                                         <li class="custom-list-item mb-3">
                                             <i class="fa-solid fa-arrow-right"></i>&nbsp; Based on a retrieval-augmented generation (RAG) architecture, we developed a basic pipeline utilising Langchain framework, which was then evaluated using Langsmith and then enhanced with advanced RAG techniques
@@ -143,7 +143,7 @@
                                 <div class="collapse" id="info4">
                                     <ul style="padding: 5px; margin-top: 10px;">
                                         <li class="custom-list-item mb-3">
-                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the summer of my first year, providing a solid programming foundation to many young learners.
+                                            <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the Summer of my first year, providing a solid programming foundation to many young learners.
                                         </li>
                                         <li class="custom-list-item mb-3">
                                             <i class="fa-solid fa-arrow-right"></i>&nbsp; I made Python learning more enjoyable and engaging for kids by creating interactive lessons and used examples that linked to hobbies and interests, which strenghtened my communication skills.
