--- a/index.html
+++ b/index.html
@@ -15,23 +15,43 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" />
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body id="page-top" class = "theme">
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Select a colour</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <canvas class="colour-canvas mt-1" id="color" style="border-radius: 50%;"></canvas>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-theme" data-bs-dismiss="modal">Close</button>
+                  </div>
+              </div>
+            </div>
+        </div>
+
         <nav class="navbar navbar-expand navbar-theme fixed-top">
             <a class="navbar-brand" href="#" id="default_link" style="font-family: 'Montserrat', sans-serif; font-size: 23px; color: #ffffff;">oliverb.uk</a>
+            <!-- <canvas id="colour_wheel" class="colour-canvas mt-1" width="40" height="40" style="border-radius: 50%;"></canvas> -->
+            <button title="Select Colour" id="colour_selector" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" aria-current = "page">
-                  <a class="nav-link d-none d-sm-block" href="#about" id="about_link" data-scroll="about">About <span class="sr-only">(current)</span></a>
+                  <a class="nav-link d-none d-sm-block" href="#about" id="about_link" data-scroll="about" style="color: white;">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item" aria-current = "page">
-                  <a class="nav-link d-none d-sm-block" href="#portfolio" id="portfolio_link" data-scroll="portfolio">Portfolio</a>
+                  <a class="nav-link d-none d-sm-block" href="#portfolio" id="portfolio_link" data-scroll="portfolio" style="color: white;">Portfolio</a>
                 </li>
                 <li class="nav-item" aria-current = "page">
-                  <a class="nav-link" href="#contact" data-scroll="contact">Contact Me</a>
+                  <a class="nav-link" href="#contact" data-scroll="contact" style="color: white;">Contact</a>
                 </li>
               </ul>
             </div>
@@ -39,18 +59,14 @@
         <!-- Header-->
         <header class="min-vh-100 d-flex justify-content-center align-items-center" id = "profile">
             <div class="row">
-                <!-- <div class="col-lg-5 col-md-12 align-items-center justify-content-center">
-                    <figure class = "rounded-circle" style = "max-width: 325px; max-height: 325px; overflow: hidden; margin: 1rem auto; ">
-                        <img src="assets/pfp_final.png" class="rounded mx-auto d-block img-fluid" alt="my image" style="width: 100%; height: 100%; object-fit: cover;">
-                    </figure>
-                </div> -->
                 <div class="col-lg-12 col-md-12 text-center">
-                    <h1 class="mb-3 carousel-fade">Hi! I am <span style="font-size: 3.5rem;">Oliver</span>,</h1>
-                    <h3 class="mb-5"><em>an aspiring software engineer from London</em></h3>
-                    <a class="btn btn-theme btn-xl" href="#about" id="about_button" style="margin-top: 1rem;">Learn more about me</a>
+                    <h1 class="mb-3 fade-object" id="name_fade_in">Oliver Brown</h1>
+                    <h3 class="mb-5 fade-object" id="desc_fade_in" style="font-size: large;"><em>is an aspiring software engineer from London.</em></h3>
+                    <a class="glow-card btn-l p-3 fade-object" href="#about" id="about_button" style="margin-top: 1rem; font-size: small;">Learn more about me</a>
                 </div>
             </div>
         </header>
+          
         <!-- About-->
         <section class="content-section" id="about">
             <div class="container px-4 px-lg-5 text-center">
@@ -58,11 +74,11 @@
                     <h2 class="mb-5">About Me</h2>
                 </div>
                 <div class = "p-3" id="aboutme">   
-                    <p class="fs-5">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
-                        Currently, I am enrolled at the University of Warwick pursuing a degree in Computer Science in my third and final year,
+                    <p class="responsive-text">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
+                        Currently, I am enrolled at the University of Warwick pursuing a Bachelors degree in Computer Science in my third and final year,
                         but when I am not studying I love to play the piano, go to the gym and work on personal coding projects.
                         While I am constantly aiming to improve my skills in my areas of interest such as web development, I am also passionate about learning new technologies and gaining experience in different areas of Computer Science.</p>
-                    <p class="fs-5">Currently, I am actively seeking graduate roles and opportunities in software development. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
+                    <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience in a graduate software development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                 </div>
             </div>
         </section>
@@ -93,7 +109,7 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="list-group-item">
+                            <li class="list-group-item" style="border-top: solid 1px white">
                                 <div data-bs-toggle="collapse" href="#info1" role="button" aria-expanded="false" aria-controls="info1" class="hover-underline">
                                     International Baccalaureate, Dartford Grammar School
                                     <span class="float-end">2020 - 2022</span>
@@ -135,7 +151,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            <li class="list-group-item">
+                            <li class="list-group-item"  style="border-top: solid 1px white">
                                 <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
                                     Tech Tutor, Funtech
                                     <span class="float-end">July - Sept, 2023</span>
@@ -157,7 +173,7 @@
                 </div>
 
             <h3 class = "mb-5 text-center">Projects <i class="fas fa-folder-open"></i></h3>
-            <div id="carouselExampleIndicators" class="carousel slide">
+            <div id="carouselExampleIndicators" class="carousel slide" style="border: solid 1px white">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Task Manager"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active" aria-current="true" aria-label="Connect 4 Solver"></button>
@@ -292,7 +308,7 @@
                 </ul>
 
 
-                <div class="border-div mx-auto d-inline-block p-3">
+                <div class="glow-card d-inline-block p-2">
                     <p>Created in 2023 using Bootstrap, by Oliver Brown</p>
                 </div>
             </div>
